--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               <i class="icon-screen-desktop m-auto text-primary"></i>
             </div>
             <h3>PHP Info</h3>
-            <p class="lead mb-0"><a href="172.17.0.2/info.php"Test PHP Connection</a></p>
+            <p class="lead mb-0"><a href="172.17.0.2/info.php">Test PHP Connection</a></p>
           </div>
         </div>
         <div class="col-lg-4">
@@ -76,7 +76,7 @@
               <i class="icon-layers m-auto text-primary"></i>
             </div>
             <h3>MySQL Connection Test</h3>
-            <p class="lead mb-0"><a href="172.17.0.2/my.php"Test MySQL Connection</a></p>
+            <p class="lead mb-0"><a href="172.17.0.2/my.php">Test MySQL Connection</a></p>
           </div>
         </div>
         <div class="col-lg-4">
